improve drop test.however now 2 widget will change css-border and it make screen flick.

--- a/war/html5test.css
+++ b/war/html5test.css
@@ -1,3 +1,5 @@
 .table{
 	border: solid 1px #888;
 }
+.border {border-style: dashed;border-color: 0xffcccc}
+.html5dragOverBorder {border-style: dashed;border-color: 0x888}
